syntax = "proto3";
package desmos.profiles.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/desmos-labs/desmos/v4/x/profiles/legacy/v4/types";

// ChainLink contains the data representing either an inter- or cross- chain
// link
message ChainLink {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // User defines the destination profile address to link
  string user = 1 [ (gogoproto.moretags) = "yaml:\"user\"" ];

  // Address contains the data of the external chain address to be connected
  // with the Desmos profile
  google.protobuf.Any address = 2 [
    (gogoproto.moretags) = "yaml:\"address\"",
    (cosmos_proto.accepts_interface) = "AddressData"
  ];

  // Proof contains the ownership proof of the external chain address
  Proof proof = 3
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"proof\"" ];

  // ChainConfig contains the configuration of the external chain
  ChainConfig chain_config = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"chain_config\""
  ];

  // CreationTime represents the time in which the link has been created
  google.protobuf.Timestamp creation_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"creation_time\"",
    (gogoproto.nullable) = false
  ];
}

// ChainConfig contains the data of the chain with which the link is made.
message ChainConfig {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  string name = 1 [ (gogoproto.moretags) = "yaml:\"name\"" ];
}

// Proof contains all the data used to verify a signature when linking an
// account to a profile
message Proof {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // PubKey represents the public key associated with the address for which to
  // prove the ownership
  google.protobuf.Any pub_key = 1 [ (gogoproto.moretags) = "yaml:\"pub_key\"" ];

  // Signature represents the hex-encoded signature of the PlainText value
  string signature = 2 [ (gogoproto.moretags) = "yaml:\"signature\"" ];

  // PlainText represents the hex-encoded value signed in order to produce the
  // Signature
  string plain_text = 3 [ (gogoproto.moretags) = "yaml:\"plain_text\"" ];
}

// Bech32Address represents a Bech32-encoded address
message Bech32Address {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  option (cosmos_proto.implements_interface) = "AddressData";

  // Value represents the Bech-32 encoded address value
  string value = 1 [ (gogoproto.moretags) = "yaml:\"value\"" ];

  // Prefix represents the HRP of the Bech32 address
  string prefix = 2 [ (gogoproto.moretags) = "yaml:\"prefix\"" ];
}

// Base58Address represents a Base58-encoded address
message Base58Address {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  option (cosmos_proto.implements_interface) = "AddressData";

  // Value contains the Base58-encoded address
  string value = 1 [ (gogoproto.moretags) = "yaml:\"value\"" ];
}

// HexAddress represents an Hex-encoded address
// NOTE: Currently it only supports keccak256-uncompressed addresses
message HexAddress {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  option (cosmos_proto.implements_interface) = "AddressData";

  // Value represents the hex address value
  string value = 1 [ (gogoproto.moretags) = "yaml:\"value\"" ];

  // Prefix represents the optional prefix used during address encoding (e.g.
  // 0x)
  string prefix = 2 [ (gogoproto.moretags) = "yaml:\"prefix\"" ];
}