syntax = "proto3";
package desmos.profiles.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "desmos/profiles/v1beta1/models_chain_links.proto";

option go_package = "github.com/desmos-labs/desmos/v2/x/profiles/types";

// MsgLinkChainAccount represents a message to link an account to a profile.
message MsgLinkChainAccount {
  // ChainAddress contains the details of the external chain address to be
  // linked
  google.protobuf.Any chain_address = 1 [
    (gogoproto.moretags) = "yaml:\"source_address\"",
    (cosmos_proto.accepts_interface) = "AddressData"
  ];

  // Proof contains the proof of ownership of the external chain address
  desmos.profiles.v1beta1.Proof proof = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"source_proof\""
  ];

  // ChainConfig contains the configuration of the external chain
  desmos.profiles.v1beta1.ChainConfig chain_config = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"source_chain_config\""
  ];

  // Signer represents the Desmos address associated with the
  // profile to which link the external account
  string signer = 4 [ (gogoproto.moretags) = "yaml:\"signer\"" ];
}

// MsgLinkChainAccountResponse defines the Msg/LinkAccount response type.
message MsgLinkChainAccountResponse {}

// ___________________________________________________________________________________________________________________

// MsgUnlinkChainAccount represents a message to unlink an account from a
// profile.
message MsgUnlinkChainAccount {
  // Owner represents the Desmos profile from which to remove the link
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

  // ChainName represents the name of the chain to which the link to remove is
  // associated
  string chain_name = 2 [ (gogoproto.moretags) = "yaml:\"chain_name\"" ];

  // Target represents the external address to be removed
  string target = 3 [ (gogoproto.moretags) = "yaml:\"target\"" ];
}

// MsgUnlinkChainAccountResponse defines the Msg/UnlinkAccount response type.
message MsgUnlinkChainAccountResponse {}
